--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -641,4 +641,10 @@
     <string name="account_error_upgraded" context="Message shown when the payment of an upgrade has not been correct">The operation failed. Your credit card has not been charged</string>
     <string name="credit_card_information_error" context="Message shown when the credit card information is not correct">The credit card information is not correct. The credit card will not be charged</string>
     <string name="not_upgrade_is_possible" context="Message shown when the user wants to upgrade an account that cannot be upgraded">Your account cannot be upgraded from the app. Please contact support@mega.nz to upgrade your account</string>
+
+    <string name="pin_lock_type" context="title to choose the type of PIN code">PIN Code Type</string>
+    <string name="four_pin_lock" context="PIN with 4 digits">4 digits PIN</string>
+    <string name="six_pin_lock" context="PIN with 6 digits">6 digits PIN</string>
+    <string name="AN_pin_lock" context="PIN alphanumeric">Alphanumeric PIN</string>    
+
 </resources>
