--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,8 @@
     <string name="general_file_info" context="Label of the option menu. When clicking this button, the app shows the info of the file">File info</string>
     <string name="general_folder_info" context="Label of the option menu. When clicking this button, the app shows the info of the folder">Folder info</string>
     <string name="general_menu" context="Title when the left menu is opened">Menu</string>
+
+    <string name="error_general_nodes" context="Error getting the root node">Error. Please, try again.</string>
  
     <string name="secondary_media_service_error_local_folder" context="Local folder error in Sync Service. There are two syncs for images and videos. This error appears when the secondary media local folder doesn't exist">The secondary media folder does not exist, please choose a new folder</string>   
     <string name="no_external_SD_card_detected" context="when no external card exists">No external SD card detected</string>
