--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -324,7 +324,8 @@
     <string name="context_contact_added" context="success message when adding a contact">Invitación enviada</string>
     <string name="context_contact_invitation_deleted" context="success message when removing a contact request">Invitación eliminada</string>
     <string name="context_contact_invitation_resent" context="success message when reinvite a contact">Invitación reenviada</string>
-     <string name="context_invitacion_reply" context="success message when adding a contact">Contestación a la invitación enviada</string>
+    <string name="context_contact_invitation_sent" context="success message when sending a contact request">Invitación enviada</string>
+    <string name="context_invitacion_reply" context="success message when adding a contact">Contestación a la invitación enviada</string>
     <string name="context_contact_removed" context="success message when removing a contact">Contacto borrado</string>
     <string name="context_contact_not_removed" context="error message">Error. No se pudo borrar el contacto</string>
     <string name="context_permissions_changed" context="success message when chaning the permissionss">Permisos modificados</string>
@@ -509,6 +510,11 @@
     <string-array name="settings_storage_download_location_array" context="if the user has an internal and an external SD card, it has to be set on the settings screen">
         <item context="internal SD card option">Tarjeta SD interna</item>
         <item context="external SD card option">Tarjeta SD externa</item>
+    </string-array>
+
+    <string-array name="add_contact_array" context="choose the way the new user's email is inserted">
+        <item context="write option">Introducir el email</item>
+        <item context="import from phone option">Importar desde la agenda</item>
     </string-array>
     
     <string name="settings_camera_upload_on" context="settings option">Activar Subidas de la Cámara</string>
