--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -329,6 +329,7 @@
     <string name="context_contact_added" context="success message when adding a contact">Contact added</string>
     <string name="context_contact_invitation_deleted" context="success message when removing a contact request">Request deleted</string>
     <string name="context_contact_invitation_resent" context="success message when reinvite a contact">Request resent</string>
+    <string name="context_contact_invitation_sent" context="success message when sending a contact request">Request sent</string>
     <string name="context_invitacion_reply" context="success message when adding a contact">Reply to the invitation sent</string>
     <string name="context_contact_removed" context="success message when removing a contact">Contact removed</string>
     <string name="context_contact_not_removed" context="error message">Error. Contact not removed</string>
@@ -514,6 +515,11 @@
     <string-array name="settings_storage_download_location_array" context="if the user has an internal and an external SD card, it has to be set on the settings screen">
         <item context="internal SD card option">Internal SD card</item>
         <item context="external SD card option">External SD card</item>
+    </string-array>
+
+    <string-array name="add_contact_array" context="choose the way the new user's email is inserted">
+        <item context="write option">Write the user\'s e-mail</item>
+        <item context="import from phone option">Import from phone</item>
     </string-array>
     
     <string name="settings_camera_upload_on" context="settings option">Enable Camera Uploads</string>
