Feature #4450 - Manage #newsignup links

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -475,6 +475,8 @@
     <string name="file_properties_remove_link" context="the user can remove the public link">El enlace se ha eliminado correctamente.</string>
     
     <string name="full_image_viewer_not_preview" context="before sharing an image, the preview has to be downloaded">La vista previa aún no ha sido descargada. Por favor espere.</string>
+
+    <string name="log_out_warning" context="alert when clicking a newsignup link being logged">Por favor, cierre la sesión antes de crear la cuenta</string>
     
     <string name="import_correct" context="success message after import a file">Importado correctamente</string>
     
