--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -665,4 +665,6 @@
 
     <string name="settings_enable_logs" context="Confirmation message when enabling logs in the app">Los logs están ahora activados</string>
     <string name="settings_disable_logs" context="Confirmation message when disabling logs in the app">Los logs están ahora desactivados</string>
+
+    <string name="search_open_location" context="Option in the sliding panel to open the folder which contains the file selected after performing a search">Abrir ubicación</string>
 </resources>
